--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "spdlog"]
 	path = Cream/vendor/spdlog
 	url = https://github.com/gabime/spdlog.git
+[submodule "GLFW"]
+	path = Cream/vendor/GLFW
+	url = https://github.com/TheCherno/glfw.git
