migrate to imgui docking

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,7 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][ImGui Demo]
-Pos=567,34
+ViewportPos=-1518,-767
+ViewportId=0x080FC883
 Size=550,680
 Collapsed=0
 
@@ -37,4 +38,6 @@ Collapsed=0
 Pos=283,606
 Size=346,92
 Collapsed=0
+
+[Docking][Data]
 
