--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Cream/vendor/imgui"]
 	path = Cream/vendor/imgui
 	url = https://github.com/TheCherno/imgui.git
+[submodule "glm"]
+	path = Cream/vendor/glm
+	url = https://github.com/g-truc/glm.git
