add graphics context and fix sandbox app

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][ImGui Demo]
-ViewportPos=-1518,-767
+ViewportPos=1338,319
 ViewportId=0x080FC883
 Size=550,680
 Collapsed=0
@@ -37,6 +37,11 @@ Collapsed=0
 [Window][Same title as another window##1]
 Pos=283,606
 Size=346,92
+Collapsed=0
+
+[Window][Test]
+Pos=213,144
+Size=92,67
 Collapsed=0
 
 [Docking][Data]
